syntax = "proto3";

// Entry is the file format used for entries when Harpocrates is encrypting
// with Harpocrates-format keys.
message Entry {
  // The content, encrypted with the EK in AES-GCM mode, using the given nonce,
  // with the entry name as AAD.
  bytes encrypted_content = 1;
  // The nonce used to encrypt.
  bytes nonce = 2;
}
