syntax = "proto3";

// Key represents an encrypted key that can be used to secure a Harpocrates vault.
message Key {
  reserved 2;

  oneof key {
    PGPKey pgp_key = 1;
    SecretboxKey secretbox_key = 3;
  }
}

// PGPKey represents a PGP key.
message PGPKey {
  // Serialized, encrypted PGP entity to use for encryption.
  bytes serialized_entity = 1;
}

// SecretboxKey represents a secretbox-based key.
message SecretboxKey {
  // Encryption key (EK), sealed with the KEK, using encrypted_key_nonce as the nonce.
  bytes encrypted_key = 1;
  // The nonce used to encrypt encrypted_key.
  bytes encrypted_key_nonce = 2;

  // Key-encryption key (KEK) derivation parameters.
  // The KEK is always a secretbox key (32 bytes wide), derived via scrypt using the given parameters.
  bytes salt = 3;
  int32 n = 4;
  int32 r = 5;
  int32 p = 6;
}
